--- a/source/_posts/博客初衷.md
+++ b/source/_posts/博客初衷.md
@@ -1,6 +1,7 @@
 title: 博客初衷
 date: 2016-01-10 17:49:58
 tags: Essay
+comments: false
 ---
 
    走在IT这条路上,技术更新迭代如此之快,每个人都需要不断的学习充电,为了督促自己学
@@ -9,7 +10,7 @@ tags: Essay
 道古今.文章不在多少,贵在坚持.
 
 传一张女神泰勒斯威夫特,人美,大长腿,明明可以靠脸吃饭,却偏偏那么会玩音乐.^_^
-	
+
 ![](http://7xpyfe.com1.z0.glb.clouddn.com/blogTaylor%20Swift156.jpg)
 
 <!-- more -->
