--- a/wiki/note-elasticsearch.org
+++ b/wiki/note-elasticsearch.org
@@ -1,3 +1,14 @@
+#+TITLE:       note-elasticsearch-使用记录
+#+AUTHOR:      manue1
+#+EMAIL:       manue1@manpc
+#+DATE:        2018-06-03 Sun
+#+URI:         /wiki/%t
+#+KEYWORDS:    Elasticsearch
+#+TAGS:        Elasticsearch
+#+LANGUAGE:    en
+#+OPTIONS:     H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
+#+DESCRIPTION: elasticsearch 使用记录
+
 * note-elasticsearch-install&config
 ** install
  安装环境: VMware12: 三台 ubuntu 14.04 内存 1g
