--- a/wiki/note-java.org
+++ b/wiki/note-java.org
@@ -1,3 +1,14 @@
+
+#+TITLE:       note-java-基础知识
+#+AUTHOR:      manue1
+#+EMAIL:       manue1@manpc
+#+DATE:        2018-06-03 Sun
+#+URI:         /wiki/%t
+#+KEYWORDS:    java
+#+TAGS:        Java
+#+LANGUAGE:    en
+#+OPTIONS:     H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
+#+DESCRIPTION: java 基础知识回顾
 * java
 ** base
    overload  重载  类
