--- a/wiki/note-emacs.org
+++ b/wiki/note-emacs.org
@@ -1,3 +1,14 @@
+#+TITLE:       note-emacs-使用记录
+#+AUTHOR:      manue1
+#+EMAIL:       manue1@manpc
+#+DATE:        2018-06-03 Sun
+#+URI:         /wiki/%t
+#+KEYWORDS:    emacs
+#+TAGS:        Emacs
+#+LANGUAGE:    en
+#+OPTIONS:     H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
+#+DESCRIPTION: emacs 使用记录
+
 * note-emacs
   the learning environment is mac 
 ** emacs tutorial
