--- a/wiki/note-redis.org
+++ b/wiki/note-redis.org
@@ -1,3 +1,14 @@
+#+TITLE:       note-redis-使用记录
+#+AUTHOR:      manue1
+#+EMAIL:       manue1@manpc
+#+DATE:        2018-06-03 Sun
+#+URI:         /wiki/%t
+#+KEYWORDS:    redis
+#+TAGS:        Redis
+#+LANGUAGE:    en
+#+OPTIONS:     H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
+#+DESCRIPTION: redis使用记录
+
 * redis use note
 ** redis install
 
