--- a/wiki/note-robot-微信机器人demo.org
+++ b/wiki/note-robot-微信机器人demo.org
@@ -1,3 +1,13 @@
+#+TITLE:       note-wechat-robot
+#+AUTHOR:      manue1
+#+EMAIL:       manue1@manpc
+#+DATE:        2018-06-03 Sun
+#+URI:         /wiki/%t
+#+KEYWORDS:    Wechat
+#+TAGS:        Wechat
+#+LANGUAGE:    en
+#+OPTIONS:     H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
+#+DESCRIPTION: wechat 聊天机器人
 * note-robot
   微信机器人wxpy是在itchat的基础上,通过大量接口优化提升了模块的易用性，
 
