--- a/blog/centos集群开发环境部署.org
+++ b/blog/centos集群开发环境部署.org
@@ -2,7 +2,7 @@
 #+AUTHOR:      manue1
 #+EMAIL:       manue1@foxmail.com
 #+DATE:        2017-06-03 Sun
-#+URI:         /blog/%y/%m/%d/note-linux-centos-集群部署
+#+URI:         /blog/%y/%m/%d/centos集群开发环境部署
 #+KEYWORDS:    Linux,Centos
 #+TAGS:        Vbox,Hadoop,Elasticsearch,Hive,Hbase,Zookeeper,KafKa,Spark
 #+LANGUAGE:    en
